--- a/src/components/shopPage/activitiesShop/Activity.module.scss
+++ b/src/components/shopPage/activitiesShop/Activity.module.scss
@@ -52,6 +52,7 @@
 }
 
 .activityActive {
+  grid-area: btn;
   display: flex;
   align-items: center;
   font-weight: 200;
@@ -76,11 +77,13 @@
 // TABLET
 @media screen and (min-height: 568px) and (min-width: 613px) {
   .activityContainer {
-    grid-template-areas: 'img head' 'img descr' 'img btn';
-    grid-template-columns: 40% auto;
-    column-gap: 1.5rem;
+    grid-template-areas: 'img' 'head' 'descr' 'btn';
     padding-bottom: 1.5rem;
     border: none;
+  }
+
+  .activityDescription {
+    font-size: 0.89em;
   }
 
   .imgContainer {
@@ -92,7 +95,10 @@
 // DESKTOP + IPAD PRO HORIZONTAL
 @media screen and (min-height: 568px) and (min-width: 1025px) {
   .activityContainer {
-    grid-template-columns: 50% auto;
+    grid-template-areas: 'img head' 'img descr' 'img btn';
+    grid-template-columns: 43% auto;
+    grid-template-rows: auto 1fr auto;
+    column-gap: 1rem;
   }
 
   .imgContainer {
